WIP: more troubleshooting and cleaning up of JS as well as css/html work

--- a/index.html
+++ b/index.html
@@ -18,34 +18,34 @@
     <div class="game-play">
 
         <div id="character-row">
-            <div class="row-header">
+            <div class="row-header-roster">
                 <h2>Select Your Character</h2>
             </div>
             <div id="roster">
-                <ul>
+<!--                <ul>
                     <li><button id="kirkanos"><img src="assets/images/kirkanos.jpg" height="150px" width="150px"></button></li>
                     <li><button id="starkiller"><img src="assets/images/starkiller3.jpg" height="150px" width="150px"> </button></li>
                     <li><button id="marajade"><img src="assets/images/marajade.jpg" height="150px" width="150px"> </button></li>
                     <li><button id="tenelka"><img src="assets/images/tenelka2.jpg" height="150px" width="150px"> </button></li>
-                </ul>
+                </ul>-->
             </div>
         </div>
 
         <div id="selected-row">
-            <div class="row-header">
+            <div class="row-header-chosen">
                 <h2>Your Character</h2>
             </div>
             <div id="chosen-character"></div>
         </div>
 
         <div id="enemies-row">
-            <div class="row-header">
+            <div class="row-header-enemies">
                 <h2>Choose Your Opponent</h2>
             </div>
             <div id="enemies-roster"></div>
         </div>
 
-        <div class="row-header">
+        <div class="row-header-fight">
             <h2>Fight Section</h2>
         </div>
 
@@ -54,7 +54,7 @@
         </div>
 
         <div id="defender-row">
-            <div class="row-header">
+            <div class="row-header-defender">
                 <h2>Defender</h2>
             </div>
             <div id="defender"></div>
