Finished?  Working gameplay, TODO: Beta testing of stats and improvements to appearance

--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
             <div id="defender"></div>
         </div>
 
-        <div id="battle-stats-display"></div>
+        <div id="battle-stats-display">
+            <h4 id="attack_stats"></h4>
+            <h4 id="counter_attack_stats"></h4>
+        </div>
         <button id="reset-btn">Reset Game</button>
     </div>
 
