Continuing to make minor tweaks to gameplay and appearance

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="assets/css/reset.css" type="text/css" rel="stylesheet">
     <!--Link to CSS Stylesheet-->
     <link href="assets/css/style.css" type="text/css" rel="stylesheet">
+
 </head>
 <body>
     <div class="header">
@@ -21,14 +22,7 @@
             <div class="row-header-roster">
                 <h2>Select Your Character</h2>
             </div>
-            <div id="roster">
-<!--                <ul>
-                    <li><button id="kirkanos"><img src="assets/images/kirkanos.jpg" height="150px" width="150px"></button></li>
-                    <li><button id="starkiller"><img src="assets/images/starkiller3.jpg" height="150px" width="150px"> </button></li>
-                    <li><button id="marajade"><img src="assets/images/marajade.jpg" height="150px" width="150px"> </button></li>
-                    <li><button id="tenelka"><img src="assets/images/tenelka2.jpg" height="150px" width="150px"> </button></li>
-                </ul>-->
-            </div>
+            <div id="roster"></div>
         </div>
 
         <div id="selected-row">
@@ -71,5 +65,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!--Link to Javascript-->
     <script src="assets/javascript/game.js"></script>
+
 </body>
 </html>
