Removed Alerts and Switched to Updating HTML for Game Results, still more testing and possible appearance modifications to be made.

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             <h4 id="attack_stats"></h4>
             <h4 id="counter_attack_stats"></h4>
         </div>
+        <h3 id="result"></h3>
         <button id="reset-btn">Reset Game</button>
     </div>
 
